fix unread indicator not showing with long names

--- a/bigbluebutton-html5/imports/ui/components/user-list/chat-list-item/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/user-list/chat-list-item/styles.scss
@@ -45,6 +45,8 @@
   align-items: center;
   flex-grow: 1;
   justify-content: center;
+  width: 50%;
+  padding-right: var(--sm-padding-y);
 }
 
 .chatNameMain {
